--- a/index.html
+++ b/index.html
@@ -1,1 +1,113 @@
-Hello World
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>My Developer Portfolio</title>
+    <style>
+        body {
+            font-family: 'Arial', sans-serif;
+            line-height: 1.6;
+            margin: 0;
+            padding: 0;
+            background-color: #f5f5f5;
+            color: #333;
+        }
+        .container {
+            max-width: 800px;
+            margin: 2rem auto;
+            background: #ffffff;
+            padding: 2rem;
+            border-radius: 8px;
+            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+        }
+        .header {
+            text-align: center;
+            margin-bottom: 2rem;
+        }
+        .header h1 {
+            font-size: 2.5rem;
+            margin: 0;
+        }
+        .header p {
+            font-size: 1rem;
+            color: #777;
+        }
+        .section {
+            margin-bottom: 2rem;
+        }
+        .section h2 {
+            font-size: 1.5rem;
+            margin-bottom: 0.5rem;
+        }
+        .section ul {
+            list-style: none;
+            padding: 0;
+        }
+        .section ul li {
+            margin: 0.5rem 0;
+            display: flex;
+            align-items: center;
+        }
+        .section ul li span {
+            margin-right: 0.5rem;
+            font-size: 1.5rem;
+        }
+        .footer {
+            text-align: center;
+            margin-top: 2rem;
+            font-size: 0.9rem;
+            color: #555;
+        }
+    </style>
+</head>
+<body>
+<div class="container">
+    <!-- Header Section -->
+    <div class="header">
+        <h1>👨‍💻 [Your Name]</h1>
+        <p>💻 Developer | 🚀 Innovator | 🌟 Problem Solver</p>
+    </div>
+
+    <!-- About Section -->
+    <div class="section">
+        <h2>📝 About Me</h2>
+        <p>Hi! I'm [Your Name], a passionate developer with expertise in [Your Skills]. I love building intuitive and user-friendly applications that solve real-world problems.</p>
+    </div>
+
+    <!-- Skills Section -->
+    <div class="section">
+        <h2>🛠️ Skills</h2>
+        <ul>
+            <li><span>🔹</span> JavaScript (React, Node.js)</li>
+            <li><span>🔹</span> Python (Django, Flask)</li>
+            <li><span>🔹</span> Cloud Platforms (AWS, GCP)</li>
+            <li><span>🔹</span> Database Management (PostgreSQL, MongoDB)</li>
+        </ul>
+    </div>
+
+    <!-- Projects Section -->
+    <div class="section">
+        <h2>🌟 Projects</h2>
+        <ul>
+            <li><span>📱</span> <strong>DevConnect</strong> - A social platform for developers to collaborate.</li>
+            <li><span>🔧</span> <strong>CodeTool</strong> - A browser-based code editor with real-time collaboration.</li>
+            <li><span>📊</span> <strong>DataInsight</strong> - A dashboard for visualizing and analyzing big data.</li>
+        </ul>
+    </div>
+
+    <!-- Contact Section -->
+    <div class="section">
+        <h2>📞 Contact</h2>
+        <p>📧 Email: <a href="mailto:your.email@example.com">your.email@example.com</a></p>
+        <p>🌐 Website: <a href="https://yourportfolio.com" target="_blank">https://yourportfolio.com</a></p>
+        <p>🔗 LinkedIn: <a href="https://linkedin.com/in/yourprofile" target="_blank">linkedin.com/in/yourprofile</a></p>
+    </div>
+
+    <!-- Footer -->
+    <div class="footer">
+        <p>Made with ❤️ and ☕ by [Your Name]</p>
+    </div>
+</div>
+</body>
+</html>
